@@ -37,10 +37,10 @@
   8bb891214b354f906db82e4b5bf72c6d655562f2 2011091500 mingw32-gcc4.xml
   45978fa489e407f1d15c10b7cdf3e2b62d561ee8 2011102200 mingw32-gdb.xml
   8ba336812b4016c512a3e7239a0948a3a494b6f4 2011101100 mingw32-gendef.xml
-  660266190e232165268b862b4e5de8b76e413d84 2011101100 mingw32-gettext.xml
+  8f27f180683c6e266727353b6f7fb425dcc10870 2011102301 mingw32-gettext.xml
   753225ffa6c00882b8e5aaf0c1be392e75dad30d 2010083100 mingw32-gmp.xml
   0fc48f3538d5fcc3f1e0f74618eba805bc293e8b 2011101100 mingw32-libarchive.xml
-  e472f09aadaf592e56152847f3cd50f413a07a07 2011101100 mingw32-libiconv.xml
+  804dcbda6f0e8562f18cbe95ef458f8d319d3b59 2011102300 mingw32-libiconv.xml
   9fb60f097832c4b192a13f6c524fe8020f2326e5 2011101100 mingw32-libtool.xml
   aaa310c7d830e7e9eef6738273630dda8e70d674 2011101100 mingw32-make.xml
   54c581f4c27ebe5a53aa1f358899d2c59b6f750a 2011101100 mingw32-mgwport.xml
