@@ -39,6 +39,12 @@
 
       <component class="bin">
         <release tarname="gettext-0.17-1-mingw32-bin.tar.lzma" >
+          <requires eq="mingw32-libgcc-*-mingw32-dll-1.tar" />
+          <requires eq="mingw32-libiconv-*-mingw32-*-dll-2.tar" />
+          <requires eq="mingw32-libintl-%-mingw32-%-dll-8.tar" />
+        </release>
+        <release tarname="gettext-0.18.1.1-2-mingw32-bin.tar.lzma" >
+          <requires eq="mingw32-libgcc-*-mingw32-dll-1.tar" />
           <requires eq="mingw32-libiconv-*-mingw32-*-dll-2.tar" />
           <requires eq="mingw32-libintl-%-mingw32-%-dll-8.tar" />
         </release>
@@ -46,10 +52,12 @@
 
       <component class="doc">
         <release tarname="gettext-0.17-1-mingw32-doc.tar.lzma" />
+        <release tarname="gettext-0.18.1.1-2-mingw32-doc.tar.lzma" />
       </component>
 
       <component class="lic">
         <release tarname="gettext-0.17-1-mingw32-lic.tar.lzma" />
+        <release tarname="gettext-0.18.1.1-2-mingw32-lic.tar.lzma" />
       </component>
 
       <component class="dev">
@@ -59,10 +67,17 @@
           <requires eq="mingw32-libiconv-*-mingw32-*-dll-2.tar" />
           <requires eq="mingw32-libintl-%-mingw32-%-dll-8.tar" />
         </release>
+        <release tarname="gettext-0.18.1.1-2-mingw32-dev.tar.lzma" >
+          <requires eq="mingw32-libgcc-*-mingw32-dll-1.tar" />
+          <requires eq="mingw32-libgettextpo-%-mingw32-%-dll-0.tar" />
+          <requires eq="mingw32-libiconv-*-mingw32-*-dll-2.tar" />
+          <requires eq="mingw32-libintl-%-mingw32-%-dll-8.tar" />
+        </release>
       </component>
 
       <component class="ext">
         <release tarname="gettext-0.17-1-mingw32-ext.tar.lzma" />
+        <release tarname="gettext-0.18.1.1-2-mingw32-ext.tar.lzma" />
       </component>
     </package>
 
@@ -99,6 +114,11 @@
 
       <component class="dll">
         <release tarname="libintl-0.17-1-mingw32-dll-8.tar.lzma" >
+          <requires eq="mingw32-libgcc-*-mingw32-dll-1.tar" />
+          <requires eq="mingw32-libiconv-*-mingw32-*-dll-2.tar" />
+        </release>
+        <release tarname="libintl-0.18.1.1-2-mingw32-dll-8.tar.lzma" >
+          <requires eq="mingw32-libgcc-*-mingw32-dll-1.tar" />
           <requires eq="mingw32-libiconv-*-mingw32-*-dll-2.tar" />
         </release>
       </component>
@@ -143,6 +163,11 @@
           <requires eq="mingw32-libiconv-*-mingw32-*-dll-2.tar" />
           <requires eq="mingw32-libintl-%-mingw32-%-dll-8.tar" />
         </release>
+        <release tarname="libgettextpo-0.18.1.1-2-mingw32-dll-0.tar.lzma" >
+          <requires eq="mingw32-libgcc-*-mingw32-dll-1.tar" />
+          <requires eq="mingw32-libiconv-*-mingw32-*-dll-2.tar" />
+          <requires eq="mingw32-libintl-%-mingw32-%-dll-8.tar" />
+        </release>
       </component>
     </package>
 
@@ -181,6 +206,11 @@
 
       <component class="dll">
         <release tarname="libasprintf-0.17-1-mingw32-dll-0.tar.lzma" >
+          <requires eq="mingw32-libstdc++-*-mingw32-dll-6.tar" />
+          <requires eq="mingw32-libgcc-*-mingw32-dll-1.tar" />
+        </release>
+        <release tarname="libasprintf-0.18.1.1-2-mingw32-dll-0.tar.lzma" >
+          <requires eq="mingw32-libstdc++-*-mingw32-dll-6.tar" />
           <requires eq="mingw32-libgcc-*-mingw32-dll-1.tar" />
         </release>
       </component>
